--- a/user-server/src/main/resources/application.yml
+++ b/user-server/src/main/resources/application.yml
@@ -7,6 +7,13 @@ spring:
   servlet:
     multipart:
       max-file-size: 100MB
+  data:
+    redis:
+      host: 47.113.225.98
+      password: '!tufirewall'
+      database: 0
+      port: 6379
+
 
 mybatis-plus:
   global-config:
@@ -23,5 +30,14 @@ logging:
           darach:
             mapper: debug
 
-upload:
-  dir: D:/upload
+
+xxl-job:
+    addresses: http://localhost:8081/
+    jobId: 5
+
+
+minio:
+  endpoint: http://localhost:9000
+  accessKey: minioadmin
+  secretKey: minioadmin
+  bucketName: animate
