--- a/user-server/src/main/resources/application.yml
+++ b/user-server/src/main/resources/application.yml
@@ -1,19 +1,18 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.113.225.98:3306/darach?useSSL=false
+    url: jdbc:mysql://localhost:3306/darach?useSSL=false
     username: root
-    password: '!Tufirewall123..'
+    password: 123456
   servlet:
     multipart:
       max-file-size: 100MB
   data:
     redis:
-      host: 47.113.225.98
-      password: '!tufirewall'
-      database: 0
+      host: localhost
+      password: 123456
+      database: 1
       port: 6379
-
 
 mybatis-plus:
   global-config:
@@ -22,18 +21,17 @@ mybatis-plus:
       logic-delete-value: 1
       logic-not-delete-value: 0
       id-type: auto
+
 logging:
   level:
-    io:
-      github:
-        franzli347:
-          darach:
-            mapper: debug
+    io.sql: debug
+    cn.zhxu.bs: debug
+#    root: debug
 
 
 xxl-job:
-    addresses: http://localhost:8081/
-    jobId: 5
+  address: http://localhost:8081/
+  jobId: 5
 
 
 minio:
@@ -41,3 +39,64 @@ minio:
   accessKey: minioadmin
   secretKey: minioadmin
   bucketName: animate
+
+############## Sa-Token ?? (??: https://sa-token.cc) ##############
+sa-token:
+  # token ??????? cookie ???
+  token-name: Authorization
+  # token ????????? ??30??-1 ??????
+  timeout: 2592000
+  # token ??????????????? token ???????????????????-1 ??????????
+  active-timeout: 120000
+  # ?????????????? ?? true ???????, ? false ??????????
+  is-concurrent: true
+  # ????????????????? token ?? true ????????? token, ? false ????????? token?
+  is-share: true
+  # token ?????????uuid?simple-uuid?random-32?random-64?random-128?tik?
+  token-style: simple-uuid
+  # ????????
+  is-log: true
+  jwt-secret-key: dfshk32186y9dfsabjklc.gafvdio7123/
+
+
+cors-config:
+    enabled: false
+    allow-credentials: true
+    allowed-headers: "*"
+    allowed-methods: "*"
+    allowed-origins: "*"
+    exposed-headers: "*"
+    path-pattern: "/**"
+    max-age: 3600
+
+password-encrypt:
+  enabled: true
+  algorithm: md5
+  salt: darach
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  api-docs:
+    path: /v3/api-docs
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: io.github.franzli347.darach.controller
+
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
+
+capture-img:
+  enable: false
+  # ????????????LineCaptcha, ShearCaptcha, CircleCaptcha
+  type: LineCaptcha
+  width: 100
+  height: 100
+
+
+version: 1.0beta
