--- a/user-server/pom.xml
+++ b/user-server/pom.xml
@@ -42,11 +42,24 @@
             <artifactId>minio</artifactId>
             <version>8.3.7</version>
         </dependency>
+        <!--PKCS7-->
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15to18</artifactId>
+            <version>1.68</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcpkix-jdk15on</artifactId>
+            <version>1.60</version>
         </dependency>
 
         <dependency>
