--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
           native-image --version
           cd user-server
       - name: compile with mvn 
-        run: mvn -Pnative package
+        run: mvn -Pnative package -Dmaven.test.skip=true
