--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,60 @@
-name: GraalVM build
-run-name: ${{ github.actor }} GraalVM build GitHub Actions 🚀
-on: [push,pull_request]
+name: build-native-image
+
+on:
+  push:
+    paths-ignore:
+      - "docs/**"
+    branches:
+      - master
 
 jobs:
   build:
-    name: Build GraalVM Image
-    runs-on: ubuntu-latest
-    
+    name: ${{ matrix.version }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        version: [latest, dev, '21.3.0']
+        os: [ macos-latest, windows-latest, ubuntu-latest]
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+
       - uses: graalvm/setup-graalvm@v1
         with:
-          java-version: '17.0.7'
-          distribution: 'graalvm'
+          version: ${{ matrix.version }}
+          java-version: '17'
+          components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: check env
+
+      - uses: docker-practice/actions-setup-docker@master
+        if: runner.os == 'MacOS'  
+      - name: Set up MongoDB
         run: |
-          echo "GRAALVM_HOME: $GRAALVM_HOME"
-          echo "JAVA_HOME: $JAVA_HOME"
-          java --version
-          native-image --version
-      - name: compile with mvn 
-        run: mvn native:compile-no-fork -Dmaven.test.skip=true
+          docker-compose up -d mongodb
+          sleep 10
+          docker ps -a
+
+      - name: Build Native Image & Run Application and FunctionalTests
+        run: |
+          mvn clean package -DskipTests -Pspring-native,build-native-image
+          ./target/com.example.demo.demoapplication &
+          sleep 10
+          mvn test -Pfunctional-test
+        if: runner.os != 'Windows'  
+
+      - name: Build Native Image & Run Application and FunctionalTests on Windows
+        run: |
+          mvn clean package -DskipTests -P "spring-native,build-native-image"
+          .\target\com.example.demo.demoapplication.exe &
+          sleep 10
+          mvn test -Pfunctional-test
+        if: runner.os == 'Windows'  
+
+      - name: Upload binary
+        uses: actions/upload-artifact@v2
+        with:
+          name: demoapplication-${{ matrix.os }}-${{ matrix.version }}
+          path: target/com.example.demo.demoapplication*  
