--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,45 @@
-name: native-image-compile
+name: Build Native Image
 
-on: [push]
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  native-image-compile-on-host:
+  build:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
 
-    - name: Cache SDKMAN installation
-      uses: actions/cache@v3
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
       with:
-        path: ~/.sdkman
-        key: ${{ runner.os }}-sdkman-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-sdkman-
-    - name: Install GraalVM with SDKMAN
-      run: |
-        curl -s "https://get.sdkman.io" | bash
-        source "$HOME/.sdkman/bin/sdkman-init.sh"
-        sdk install java 21.2.0.r11-grl
-        java -version
-    - name: Install GraalVM Native Image
-      run: |
-        source "$HOME/.sdkman/bin/sdkman-init.sh"
-        gu install native-image
-        native-image --version
-    - name: Install Maven, that uses GraalVM for later builds
-      run: |
-        source "$HOME/.sdkman/bin/sdkman-init.sh"
-        sdk install maven
-        mvn --version
-    - name: Run GraalVM Native Image compilation of Spring Boot App (Maven version instead of ./compile.sh)
-      run: |
-        source "$HOME/.sdkman/bin/sdkman-init.sh"
-        mvn -B clean package -P native -Dmaven.test.skip=true --no-transfer-progress
+        java-version: '17'
+        distribution: 'adopt'
+
+    - name: Set up GraalVM
+      uses: DeLaGuardo/setup-graalvm@4.0
+      with:
+        graalvm-version: '21.1.0.java17'
+
+    - name: Install Native Image
+      run: gu install native-image
+
+    - name: Cache Maven packages
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
+
+    - name: Build with Maven
+      run: mvn -B package -DskipTests -Pnative
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: native-image
+        path: target/*.jar
