--- a/darach-cover-executor/pom.xml
+++ b/darach-cover-executor/pom.xml
@@ -6,7 +6,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>darach-cover-executor</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <groupId>io.github.franzli347</groupId>
     <version>1.0</version>
 
@@ -14,9 +14,12 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <slf4j-api.version>1.7.36</slf4j-api.version>
+        <slf4j-api.version>2.0.5</slf4j-api.version>
         <junit-jupiter.version>5.9.2</junit-jupiter.version>
-        <ffmpeg.version>0.6.2</ffmpeg.version>
+        <ffmpeg.version>0.7.0</ffmpeg.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 
@@ -45,7 +48,7 @@
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
-            <version>8.3.7</version>
+            <version>8.5.2</version>
         </dependency>
 
         <dependency>
@@ -54,13 +57,14 @@
             <version>${ffmpeg.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.16</version>
+        </dependency>
+
 
     </dependencies>
-
-
-    <build>
-
-    </build>
 
 
 
