--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,4 @@ jobs:
           java --version
           native-image --version
       - name: Example step using Maven plugin  # https://graalvm.github.io/native-build-tools/latest/maven-plugin.html
-        run: mvn -Pnative native:compile -DskipTests
-
+        run: mvn -U clean install -DskipTests && mvn native:compile -Pnative -DskipTests 
