--- a/darach-start/src/main/resources/application.yml
+++ b/darach-start/src/main/resources/application.yml
@@ -9,6 +9,13 @@ spring:
     servlet:
       multipart:
         max-file-size: 100MB
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+
+
+
   data:
     redis:
       host: localhost
@@ -59,3 +66,6 @@ knife4j:
 rsa:
   public-key-path: rsa/public_key.pem
   private-key-path: rsa/private_key.pem
+
+server:
+  port: 23711
