--- a/darach-start/src/main/resources/application.yml
+++ b/darach-start/src/main/resources/application.yml
@@ -1,20 +1,27 @@
 spring:
   profiles:
     active: user,video
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/darach?useSSL=false
+    url: jdbc:mysql://20.48.77.3:3306/darach?useSSL=false
     username: root
-    password: 123456
+    password: fzlfzlmysql..
+    hikari:
+      keepalive-time: 60000
+      max-lifetime: 1800000
+      connection-test-query: SELECT 1
+      maximum-pool-size: 8
 
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
+
   data:
     redis:
-      host: localhost
-      password: 123456
+      host: 20.78.117.200
+      password: fzlfzlredis..
       database: 1
       port: 6379
       repositories:
@@ -35,7 +42,6 @@ cors-config:
   path-pattern: "/**"
   max-age: 3600
 
-
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
@@ -46,14 +52,12 @@ springdoc:
   group-configs:
     - group: 'default'
       paths-to-match: '/**'
-      packages-to-scan: io.github.franzli347.darach.controller
-
+      packages-to-scan: io.github.franzli347.controller
 
 knife4j:
   enable: true
   setting:
     language: zh_cn
-
 
 rsa:
   public-key-path: rsa/public_key.pem
